--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -43,14 +43,23 @@ spring:
   mvc:
     static-path-pattern: /static/**
 
-#  redis:
-#    host: localhost
-#    port: 6379
+  redis:
+    host: localhost
+    port: 6379
 
 logging:
   level:
-    org.hibernate.SQL: debug
-    org.hibernate.type: trace
+#    org.hibernate.SQL: debug
+#    org.hibernate.type: trace
+    org:
+      springframework: INFO
+  pattern:
+    file: "[%d{HH:mm:ss.SSS}][%-5level][%logger.%method:line%line] - %msg%n"
+  file:
+    path: logs
+  logback:
+    rollingpolicy:
+      file-name-pattern: Log-%d{yyyy-MM-dd}.%i.log
 
 springdoc:
   swagger-ui:
