--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -35,6 +35,7 @@ spring:
       hibernate:
         format_sql: true
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+    open-in-view: false
 
   servlet:
     multipart:
@@ -49,8 +50,8 @@ spring:
 
 logging:
   level:
-    org.hibernate.SQL: debug
-    org.hibernate.type: trace
+#    org.hibernate.SQL: debug
+#    org.hibernate.type: trace
     org:
       springframework: INFO
   pattern:
