chore : redis 비밀번호 설정

--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -45,8 +45,9 @@ spring:
     static-path-pattern: /static/**
 
   redis:
-    host: localhost
+    host: ddockddack.com
     port: 6379
+    password: ddockddack123!
 
 logging:
   level:
