--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     implementation 'io.openvidu:openvidu-java-client:2.25.0'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
+    implementation 'com.amazonaws:aws-java-sdk-rekognition:1.12.455'
 
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
