fix : openvidu.getConeections 수정

--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -18,7 +18,8 @@ server:
       suffix: .log # access log 파일이름 suffix (확장자 포함)
       rotate: true # access log rotation 여부
       rename-on-rotate: true # rotation 시, 새로운 이름 지정 여부 (rotate 될 때의 날짜명이 로그 파일이름에 찍힘)
-
+    threads:
+      max: 200
 spring:
   profiles:
     active:
