--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -66,6 +66,9 @@ dependencies {
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
