fix : gameImage repository 수정

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,6 +1,4 @@
 NODE_ENV = "production"
-VUE_APP_IMAGE_PATH = https://ddockddack-bucket.s3.ap-northeast-2.amazonaws.com
-VUE_APP_GAMEIMAGES_PATH = https://ddockddack.com/static/gameImages
-VUE_APP_BESTCUTS_PATH = https://ddockddack.com/static/bestcuts
+VUE_APP_IMAGE_PATH = https://ddockddack-image-bucket.s3.ap-northeast-2.amazonaws.com
 VUE_APP_KAKAO_LOGIN_PATH = https://ddockddack.com/oauth2/authorization/kakao
 VUE_APP_GOOGLE_LOGIN_PATH = https://ddockddack.com/oauth2/authorization/google
