--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "process": "^0.11.10",
     "vue": "^3.2.13",
     "vue-click-outside-element": "^3.1.2",
+    "vue-gtag-next": "^1.14.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
