--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@mdi/js": "^7.1.96",
     "axios": "^1.2.5",
     "core-js": "^3.8.3",
+    "heic2any": "0.0.4",
     "html2canvas": "^1.4.1",
     "openvidu-browser": "^2.25.0",
     "process": "^0.11.10",
