feat : 싱글게임 리스트 인기순 정렬 기능 추가

--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -40,17 +40,10 @@ spring:
 
 logging:
   level:
-#    org.hibernate.SQL: debug
-#    org.hibernate.type: trace
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
     org:
       springframework: INFO
-  pattern:
-    file: "[%d{HH:mm:ss.SSS}][%-5level][%logger.%method:line%line] - %msg%n"
-  file:
-    path: logs
-  logback:
-    rollingpolicy:
-      file-name-pattern: Log-%d{yyyy-MM-dd}.%i.log
 
 management:
   endpoints:
