--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -40,8 +40,8 @@ spring:
 
 logging:
   level:
-    org.hibernate.SQL: debug
-    org.hibernate.type: trace
+#    org.hibernate.SQL: debug
+#    org.hibernate.type: trace
     org:
       springframework: INFO
 
