--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "vue-click-outside-element": "^3.1.2",
     "vue-gtag-next": "^1.14.0",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
