--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV = "production"
-VUE_APP_IMAGE_PATH = https://ddockddack-image-bucket.s3.ap-northeast-2.amazonaws.com
+VUE_APP_IMAGE_PATH = https://d1zr6mc95vi0f7.cloudfront.net
 VUE_APP_KAKAO_LOGIN_PATH = https://ddockddack.com/api/oauth2/authorization/kakao
 VUE_APP_GOOGLE_LOGIN_PATH = https://ddockddack.com/api/oauth2/authorization/google
